kubernetes/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
spec:
  containers:
  - name: app
    image: images.ta.example/app:v4
    ports:
      - containerPort: 80
  restartPolicy: Always
