kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-site
  labels:
    app: devops-static-site
spec:
  type: ClusterIP
  selector:
    app: static-web
  ports:
    - name: http
      port: 80
      targetPort: 8080
